--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,36 +5,10 @@
   <div class="card mb-3">
     <div class="card-header d-flex justify-content-between">
       <span class="card-title">New expense</span>
-      <button type="submit" class="btn btn-outline-primary" (click)="addExpense()" [disabled]="expenseForm.invalid">Submit</button>
+      <button type="submit" class="btn btn-outline-primary" (click)="form.addExpense()" [disabled]="form.expenseForm.invalid">Submit</button>
     </div>
     <div class="card-body">
-      <form [formGroup]="expenseForm" (ngSubmit)="addExpense()">
-        <div class="form-group form-row">
-          <div class="col-3">
-            <label for="description">Description</label>
-          </div>
-          <div class="col">
-            <input id="description" type="text" class="form-control" formControlName="description">
-          </div>
-          <small *ngIf="expenseForm.get('description').dirty && expenseForm.get('description')?.errors?.required">Description is verplicht</small>
-        </div>
-        <div class="form-group  form-row">
-          <div class="col-3">
-            <label for="amount">Amount</label>
-          </div>
-          <div class="col">
-            <input id="amount" type="number" step="0.01" class="form-control" formControlName="amount">
-          </div>
-        </div>
-        <div class="form-group  form-row">
-          <div class="col-3">
-            <label for="date">Date</label>
-          </div>
-          <div class="col">
-            <input id="date" type="date" class="form-control" formControlName="date">
-          </div>
-        </div>
-      </form>
+      <app-expenses-form #form="expenseFormComponent" (newExpense)="addExpenseToList($event)"></app-expenses-form>
     </div>
   </div>
 
@@ -42,29 +16,6 @@
     <div class="card-header">
       <input class="form-control" placeholder="search expenses" [formControl]="search" />
     </div>
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th>description</th>
-          <th>amount</th>
-          <th>date</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let expense of expenses | search : (search$ | async)" [class.expensive]="expense.amount > 5000">
-          <td>{{ expense.description }}</td>
-          <td>{{ expense.amount | currency : 'EUR' }}</td>
-          <td>{{ expense.date | date : 'yyyy-MM-dd' }}</td>
-          <td>
-            <a href="#" (click)="deleteExpense(expense)">delete</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <app-expenses-list [expenses]="expenses | search : (search$ | async)"></app-expenses-list> 
   </div>
 </div>
-
-<code>
-  <pre>{{expenses | json }}</pre>
-</code>
