--- a/src/app/expenses/expenses-list/expenses-list.component.html
+++ b/src/app/expenses/expenses-list/expenses-list.component.html
@@ -1,4 +1,4 @@
-<table class="table table-hover">
+<table zoomTable class="table table-hover">
     <thead>
       <tr>
         <th>description</th>
