--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,8 @@
-
+.active{
+    color: #fff;
+    background-color: #28a745;
+    border-color: #28a745;
+}
 
 input.ng-dirty.ng-invalid{
     border: solid 2px red;
